Fix talk auto reconnect bug